                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 17-09-2006 fixed: Play from remote on a folder queued it then immediately paused the playback.
 - 16-09-2006 changed: potential fix for [ 1493993 ] Strange date behavior on FAT32 SMB shares. fallback to create date instead of modification date if missing
 - 16-09-2006 fixed: Music playlist could cache the playlist details to disk before the details were read.
 - 15-09-2006 fixed: Double up of settings separators could occur if all the settings between them were removed via advancedsettings.xml
 - 15-09-2006 fixed: [ 1559620 ] Resume in Movie-Information window doesn't work first time.
 - 15-09-2006 changed: New special:// protocol for the virtual folders (Such as $MUSICPLAYLISTS etc.)
 - 15-09-2006 fixed: Weather wasn't refreshed on language change, so showed a mix of languages.
 - 15-09-2006 fixed: Playlists used picture icons if <playlistsasfolders> was false.
 - 15-09-2006 changed: Kai button enabling yet again (will it ever end??)
 - 15-09-2006 changed: The play action will pause if a media item is currently playing.
 - 15-09-2006 fixed: Play with... popped up instead of Play on the context menu of playlists in My Music.
 - 15-09-2006 fixed: Advancedsettings were also saved to guisettings.xml.
 - 15-09-2006 changed: grabbing of the next song in partymode speed up.
 - 14-09-2006 fixed: seeking in mpeg1 files using dvdplayer caused video to halt. (bug is really in libmpeg2, but work around in place for now)
 - 14-09-2006 changed: Behaviour of Play/Host buttons under various circumstances in Kai.
 - 14-09-2006 fixed: hddsmart request coused a "hang" on request!