@@ -89,6 +89,7 @@ public:
   virtual float GetActualFPS() { return 0.0f; };
   virtual void SeekTime(__int64 iTime = 0){};
   virtual __int64 GetTime(){ return 0;};
+  virtual void ResetTime() {};
   virtual int GetTotalTime(){ return 0;};
   virtual int GetBitrate(){ return 0;};
   virtual int GetChannels(){ return 0;};
