@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 17-09-2006 fixed: Last.FM didn't reset the timer when switching tracks.
  - 17-09-2006 fixed: Play from remote on a folder queued it then immediately paused the playback.
  - 16-09-2006 changed: potential fix for [ 1493993 ] Strange date behavior on FAT32 SMB shares. fallback to create date instead of modification date if missing
  - 16-09-2006 fixed: Music playlist could cache the playlist details to disk before the details were read.
